--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"/>
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="./assets/css/style.css" />
 		<title>Work Day Scheduler</title>
 	</head>
 
@@ -18,9 +18,53 @@
 			<p id="currentDay" class="lead"></p>
 		</header>
 		<div class="container">
-			<!-- Timeblocks go here -->
+			<div class="row">
+				<h2 class="col-1">9AM</h2>
+				<textarea class="col-10"></textarea>
+				<button class="col-1"><i class="fas fa-save"></i></button>
+			</div>
+			<div class="row">
+				<h2 class="col-1">10AM</h2>
+				<textarea class="col-10"></textarea>
+				<button class="col-1"><i class="fas fa-save"></i></button>
+			</div>
+			<div class="row">
+				<h2 class="col-1">11AM</h2>
+				<textarea class="col-10"></textarea>
+				<button class="col-1"><i class="fas fa-save"></i></button>
+			</div>
+			<div class="row">
+				<h2 class="col-1">NOON</h2>
+				<textarea class="col-10"></textarea>
+				<button class="col-1"><i class="fas fa-save"></i></button>
+			</div>
+			<div class="row">
+				<h2 class="col-1">1PM</h2>
+				<textarea class="col-10"></textarea>
+				<button class="col-1"><i class="fas fa-save"></i></button>
+			</div>
+			<div class="row">
+				<h2 class="col-1">2PM</h2>
+				<textarea class="col-10"></textarea>
+				<button class="col-1"><i class="fas fa-save"></i></button>
+			</div>
+			<div class="row">
+				<h2 class="col-1">3PM</h2>
+				<textarea class="col-10"></textarea>
+				<button class="col-1"><i class="fas fa-save"></i></button>
+			</div>
+			<div class="row">
+				<h2 class="col-1">4PM</h2>
+				<textarea class="col-10"></textarea>
+				<button class="col-1"><i class="fas fa-save"></i></button>
+			</div>
+			<div class="row">
+				<h2 class="col-1">5PM</h2>
+				<textarea class="col-10"></textarea>
+				<button class="col-1"><i class="fas fa-save"></i></button>
+			</div>
 		</div>
-
+		<script src="./assets/js/script.js"></script>
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 	</body>
