--- a/index.html
+++ b/index.html
@@ -19,49 +19,49 @@
 		</header>
 		<div class="container">
 			<div class="row">
-				<h2 class="col-1">9AM</h2>
-				<textarea class="col-10"></textarea>
-				<button class="col-1"><i class="fas fa-save"></i></button>
+				<h2 class="col-1 hour time-block">9AM</h2>
+				<textarea id="task" class="col-10 description"></textarea>
+				<button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
 			<div class="row">
-				<h2 class="col-1">10AM</h2>
-				<textarea class="col-10"></textarea>
-				<button class="col-1"><i class="fas fa-save"></i></button>
+				<h2 class="col-1 hour time-block">10AM</h2>
+				<textarea id="task" class="col-10 description"></textarea>
+				<button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
 			<div class="row">
-				<h2 class="col-1">11AM</h2>
-				<textarea class="col-10"></textarea>
-				<button class="col-1"><i class="fas fa-save"></i></button>
+				<h2 class="col-1 hour time-block">11AM</h2>
+				<textarea id="task" class="col-10 description"></textarea>
+				<button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
 			<div class="row">
-				<h2 class="col-1">NOON</h2>
-				<textarea class="col-10"></textarea>
-				<button class="col-1"><i class="fas fa-save"></i></button>
+				<h2 class="col-1 hour time-block">12PM</h2>
+				<textarea id="task" class="col-10 description"></textarea>
+				<button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
 			<div class="row">
-				<h2 class="col-1">1PM</h2>
-				<textarea class="col-10"></textarea>
-				<button class="col-1"><i class="fas fa-save"></i></button>
+				<h2 class="col-1 hour time-block">1PM</h2>
+				<textarea id="task" class="col-10 description"></textarea>
+				<button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
 			<div class="row">
-				<h2 class="col-1">2PM</h2>
-				<textarea class="col-10"></textarea>
-				<button class="col-1"><i class="fas fa-save"></i></button>
+				<h2 class="col-1 hour time-block">2PM</h2>
+				<textarea id="task" class="col-10 description"></textarea>
+				<button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
 			<div class="row">
-				<h2 class="col-1">3PM</h2>
-				<textarea class="col-10"></textarea>
-				<button class="col-1"><i class="fas fa-save"></i></button>
+				<h2 class="col-1 hour time-block">3PM</h2>
+				<textarea id="task" class="col-10 description"></textarea>
+				<button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
 			<div class="row">
-				<h2 class="col-1">4PM</h2>
-				<textarea class="col-10"></textarea>
-				<button class="col-1"><i class="fas fa-save"></i></button>
+				<h2 class="col-1 hour time-block">4PM</h2>
+				<textarea id="task" class="col-10 description"></textarea>
+				<button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
 			<div class="row">
-				<h2 class="col-1">5PM</h2>
-				<textarea class="col-10"></textarea>
-				<button class="col-1"><i class="fas fa-save"></i></button>
+				<h2 class="col-1 hour time-block">5PM</h2>
+				<textarea id="task" class="col-10 description"></textarea>
+				<button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
 		</div>
 		<script src="./assets/js/script.js"></script>
