added js logic to save hourly tasks and load them on open/reload/refresh of the page

--- a/index.html
+++ b/index.html
@@ -19,49 +19,49 @@
 		</header>
 		<div class="container">
 			<div class="row">
-				<h2 class="col-1 hour time-block">9AM</h2>
-				<textarea id="task" class="col-10 description"></textarea>
-				<button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+				<h2 class="col-2 hour time-block">9AM</h2>
+				<textarea id="task0" class="col-8 description"></textarea>
+				<button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
 			<div class="row">
-				<h2 class="col-1 hour time-block">10AM</h2>
-				<textarea id="task" class="col-10 description"></textarea>
-				<button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+				<h2 class="col-2 hour time-block">10AM</h2>
+				<textarea id="task1" class="col-8 description"></textarea>
+				<button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
 			<div class="row">
-				<h2 class="col-1 hour time-block">11AM</h2>
-				<textarea id="task" class="col-10 description"></textarea>
-				<button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+				<h2 class="col-2 hour time-block">11AM</h2>
+				<textarea id="task2" class="col-8 description"></textarea>
+				<button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
 			<div class="row">
-				<h2 class="col-1 hour time-block">12PM</h2>
-				<textarea id="task" class="col-10 description"></textarea>
-				<button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+				<h2 class="col-2 hour time-block">12PM</h2>
+				<textarea id="task3" class="col-8 description"></textarea>
+				<button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
 			<div class="row">
-				<h2 class="col-1 hour time-block">1PM</h2>
-				<textarea id="task" class="col-10 description"></textarea>
-				<button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+				<h2 class="col-2 hour time-block">1PM</h2>
+				<textarea id="task4" class="col-8 description"></textarea>
+				<button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
 			<div class="row">
-				<h2 class="col-1 hour time-block">2PM</h2>
-				<textarea id="task" class="col-10 description"></textarea>
-				<button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+				<h2 class="col-2 hour time-block">2PM</h2>
+				<textarea id="task5" class="col-8 description"></textarea>
+				<button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
 			<div class="row">
-				<h2 class="col-1 hour time-block">3PM</h2>
-				<textarea id="task" class="col-10 description"></textarea>
-				<button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+				<h2 class="col-2 hour time-block">3PM</h2>
+				<textarea id="task6" class="col-8 description"></textarea>
+				<button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
 			<div class="row">
-				<h2 class="col-1 hour time-block">4PM</h2>
-				<textarea id="task" class="col-10 description"></textarea>
-				<button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+				<h2 class="col-2 hour time-block">4PM</h2>
+				<textarea id="task7" class="col-8 description"></textarea>
+				<button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
 			<div class="row">
-				<h2 class="col-1 hour time-block">5PM</h2>
-				<textarea id="task" class="col-10 description"></textarea>
-				<button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+				<h2 class="col-2 hour time-block">5PM</h2>
+				<textarea id="task8" class="col-8 description"></textarea>
+				<button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
 		</div>
 		<script src="./assets/js/script.js"></script>
