added coloring based on what hour of the day it is

--- a/index.html
+++ b/index.html
@@ -18,54 +18,54 @@
 			<p id="currentDate" class="lead"></p>
 		</header>
 		<div class="container">
-			<div class="row">
+			<div class="row" id="9">
 				<h2 class="col-2 hour time-block">9AM</h2>
-				<textarea id="task0" class="col-8 description"></textarea>
+				<textarea id="task0" class="form-control bg-transparent col-8 "></textarea>
 				<button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
-			<div class="row">
+			<div class="row" id="10">
 				<h2 class="col-2 hour time-block">10AM</h2>
-				<textarea id="task1" class="col-8 description"></textarea>
+				<textarea id="task1" class="form-control bg-transparent col-8 "></textarea>
 				<button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
-			<div class="row">
+			<div class="row" id="11">
 				<h2 class="col-2 hour time-block">11AM</h2>
-				<textarea id="task2" class="col-8 description"></textarea>
+				<textarea id="task2" class="form-control bg-transparent col-8 "></textarea>
 				<button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
-			<div class="row">
+			<div class="row" id="12">
 				<h2 class="col-2 hour time-block">12PM</h2>
-				<textarea id="task3" class="col-8 description"></textarea>
+				<textarea id="task3" class="form-control bg-transparent col-8 "></textarea>
 				<button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
-			<div class="row">
+			<div class="row" id="13">
 				<h2 class="col-2 hour time-block">1PM</h2>
-				<textarea id="task4" class="col-8 description"></textarea>
+				<textarea id="task4" class="form-control bg-transparent col-8 "></textarea>
 				<button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
-			<div class="row">
+			<div class="row" id="14">
 				<h2 class="col-2 hour time-block">2PM</h2>
-				<textarea id="task5" class="col-8 description"></textarea>
+				<textarea id="task5" class="form-control bg-transparent col-8 "></textarea>
 				<button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
-			<div class="row">
+			<div class="row" id="15">
 				<h2 class="col-2 hour time-block">3PM</h2>
-				<textarea id="task6" class="col-8 description"></textarea>
+				<textarea id="task6" class="form-control bg-transparent col-8 "></textarea>
 				<button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
-			<div class="row">
+			<div class="row" id="16">
 				<h2 class="col-2 hour time-block">4PM</h2>
-				<textarea id="task7" class="col-8 description"></textarea>
+				<textarea id="task7" class="form-control bg-transparent col-8 "></textarea>
 				<button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
-			<div class="row">
+			<div class="row" id="17">
 				<h2 class="col-2 hour time-block">5PM</h2>
-				<textarea id="task8" class="col-8 description"></textarea>
+				<textarea id="task8" class="form-control bg-transparent col-8 "></textarea>
 				<button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
 			</div>
 		</div>
-		<script src="./assets/js/script.js"></script>
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+		<script src="./assets/js/script.js"></script>
 	</body>
 </html>
